  was introduced in gretl 1.7.4)
- Script editor: add option to show line numbers
- Native database windows: add right-click popup menu
- Local function package listing: sort alphabetically
- logit/probit: add code to detect perfect classifiers
- "tabprint" model-printing command: add --rtf option to 
  produce RTF output rather than LaTex

3/21/2008 version 1.7.4
- Fix for ADF-GLS test with missing values
- Fix for detection of unit-diagonal matrix (oops!)
- Merge fit and fcasterr commands with fcast
- Add $fcast and $fcerr accessors for use with fcast
- Autocorrelation test: use Kiviet's original 1986 formula
  for the LMF statistic
- "system" command: enable naming of systems in the manner
  "sysname <- system"; enable forecasts; make parsing of
  identities more robust; enable TeX view/print in GUI;
  add new accessors $yhat, $sysGamma, $sysA, $sysB
- "estimate" command: add --quiet option
- remove obsolete command: multiply
- Consolidate the commands corc, hilu and pwe into one new
  command with options: ar1
- Fix for the case of graphing 6 time series together
- Fix bugs 1908139, 1909469
- Fix documentation of $stopwatch
- Move handling of strings into "genr"; add strlen function
- fdjac and BFGSmax functions: don't require that the
  function-call argument be wrapped in quotes
- "corr" command: allow printing of ranked data for Kendall's
  tau as well as spearman (verbose option); also add a
  verbose check-box to the rank-correlation dialog
- User's Guide: add a discussion of Arellano-Bond
- Enable "delete" command for saved strings
- Enable naming of matrix columns, via colnames function or
  the GUI matrix editor
- Enable "dataset resample" in loops (experimental)
- Runs test: enable the "--difference" option in the CLI;
  handle the case where positive and negative values are not
  equiprobable by default, but add an "--equal" option to 
  impose the equiprobability assumption
- Fix for "data error" in VECM autocorrelation tests (for now