@@ -117,9 +117,9 @@ print "\"Png_font\"; ValueData: \"verdana 8\"\n";
 print "Root: HKCU; Subkey: \"Software\\gretl\"; ValueType: string; ValueName: ";
 print "\"Gp_colors\"; ValueData: \"\"\n";
 print "Root: HKCU; Subkey: \"Software\\gretl\"; ValueType: string; ValueName: ";
-print "\"DataPage\"; ValueData: \"Ramanathan\"\n";
+print "\"DataPage\"; ValueData: \"Gretl\"\n";
 print "Root: HKCU; Subkey: \"Software\\gretl\"; ValueType: string; ValueName: ";
-print "\"ScriptPage\"; ValueData: \"Ramanathan\"\n";
+print "\"ScriptPage\"; ValueData: \"Gretl\"\n";
 print "Root: HKCU; Subkey: \"Software\\gretl\"; ValueType: string; ValueName: ";
 print "\"manpref\"; ValueData: \"0\"\n";
 print "Root: HKCU; Subkey: \"Software\\gretl\"; ValueType: string; ValueName: ";
